--- a/android/app/src/main/res/drawable/xx.xml
+++ b/android/app/src/main/res/drawable/xx.xml
@@ -1,11 +1,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/btn1"/>
+    <solid android:color="@color/btn1" />
 
-    <corners
-        android:radius="8dp"/>
+    <corners android:radius="8dp" />
 
     <padding
         android:bottom="8dp"
-        android:top="8dp"/>
+        android:top="8dp" />
 
 </shape>
